# swagger.yaml
@@ -27,7 +27,7 @@ tags:
     description: User Endpoints (admin only)
 
 paths:
-  "/auth/signup":
+  "/auth/register":
     post:
       description: createw a new account
       tags: [Auth]
@@ -83,7 +83,7 @@ paths:
           $ref: "#/components/responses/400"
         "500":
           $ref: "#/components/responses/500"
-  "/auth/signin":
+  "/auth/login":
     post:
       description: Login to your account
       tags: [Auth]
